[package]
name = "passtoken"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "passtoken"
crate-type = ["cdylib"]

[dependencies]
core = { path = "./libpasstoken/core" }
cpython = { version = "0.7.1", features = ["extension-module"] }
tokio = "1.23.0"
